--- a/index.html
+++ b/index.html
@@ -1,12 +1,56 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Redirecting...</title>
+    <title>LANDGOLD - Blockchain Property Marketplace</title>
     <meta http-equiv="refresh" content="0; URL=enhanced-landgold-app.html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            background-color: #f8f9fa;
+        }
+        .redirect-message {
+            text-align: center;
+            padding: 20px;
+            background: white;
+            border-radius: 12px;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+            max-width: 90%;
+            width: 300px;
+        }
+        .redirect-message h1 {
+            color: #00A859;
+            margin-top: 0;
+        }
+        .redirect-message p {
+            color: #374151;
+        }
+        .redirect-message a {
+            color: #00A859;
+            text-decoration: none;
+            font-weight: 500;
+        }
+        .redirect-message a:hover {
+            text-decoration: underline;
+        }
+    </style>
 </head>
 <body>
-    <p>If you are not redirected, <a href="enhanced-landgold-app.html">click here</a>.</p>
+    <div class="redirect-message">
+        <h1>LANDGOLD</h1>
+        <p>If you are not automatically redirected, <a href="enhanced-landgold-app.html">click here</a> to access the mobile app.</p>
+    </div>
+    <script>
+        // Fallback redirect in case meta refresh fails
+        setTimeout(function() {
+            window.location.href = 'enhanced-landgold-app.html';
+        }, 1000);
+    </script>
 </body>
 </html>
